# kurff

./: .gitignore  CMakeLists.txt  README.md  log  main.cpp  subtitle.hpp
cascade/: cascade.hpp
classifier/: classifier.hpp  net.cc  net.h  network.hpp  regression.hpp
convert/: convert_cascade.cpp  convert_classifier.cpp  convert_hard_mining.cpp  convert_icdar2013.cpp  convert_pos_neg_image.cpp  convert_sub_image.cpp  dataio.hpp  diff_distribution.cpp
core/: box.hpp  common.hpp  graph.hpp  parameters.hpp  registry.h  result.hpp
data/: annotation.hpp  anotation.hpp  data.hpp  dataset.hpp
framework/: framework.hpp
grammar/: grammar.hpp
model/: classifier.hpp  model.hpp
post/: process.hpp
propcess/: process.hpp
proposals/: CannyProposal.hpp  FASTProposal.hpp  MSERProposal.hpp  Merge.hpp  Proposal.hpp  ProposalGen.hpp  mser.cpp  mser.h
proto/: kurff.pb.cc  kurff.pb.h  kurff.proto
script/: classifier_net.py  classifier_solver.prototxt  convert_all.sh  convert_classifier.sh  convert_dataset.sh  convert_hard.sh  deploy.prototxt  inception.prototxt  test_input.prototxt  test_input.py  train_classifier.sh  train_val.prototxt
synthesis/: deform.hpp  fonts.hpp  synthesis.hpp
test/: add_path_label.cpp  compare_two_image.cpp  test_classifier.cpp  test_common.cpp  test_dataset.cpp  test_example.cpp  test_framework.cpp  test_input.cpp  test_mser.cpp  test_network.cpp  test_proposal_gen.cpp  test_synthesis.cpp  test_video_canny.cpp
utils/: box.hpp  character.hpp  colors.cpp  colors.h  convert_database.cpp  dataio.hpp  graph.hpp  process.hpp  text.hpp  utils.hpp  visualization.hpp
video/: video.hpp
